# guidio

./: .env.example  .gitignore  README.md  docker-compose.yml  migrate.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  prestart.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 58512866297f_add_cover_image_to_userdetail.py  78d7a665bd73_add_is_instructor_to_userdetail.py  7e377dd0480c_add_created_at_field_to_guide.py  87bdaebd4785_change_is_active_to_false.py  8fe5031c10e5_published_note_cover_image_to_guide.py  a64bfca636a6_add_is_superuser_to_user_table.py  b197c53728fb_guide_fk_to_user_nullable.py  d70fa46aa2b2_initial_create_tables.py  e270c796f949_refactor_fk_ondelete.py  fb600071c3cf_user_detail_unique_fk_to_user.py
backend/src/: backend_pre_start.py  config.py  database.py  initial_data.py  main.py
backend/src/auth/: dependencies.py  router.py  schemas.py  service.py
backend/src/core/: config.py  constants.py  dependencies.py  exceptions.py  middlewares.py  models.py  schemas.py  service.py  settings.py
backend/src/guides/: constants.py  manager.py  router.py  service.py
backend/src/templates/mail/: activation_email.html
backend/src/users/: exceptions.py  manager.py  router.py  schemas.py
backend/src/utils/: auth.py  guides.py
backend/src/utils/mail/: send_mail.py
frontend/: README.md  package.json
migrations/: env.py
public/: index.html
src/: App.js  config.py  database.py  (+4 more)
(+167 files in other folders)
